--- a/slides/main.tex
+++ b/slides/main.tex
@@ -453,18 +453,10 @@ fn query_enemies(query: Query<Entity, (With<Health>, Without<Cow>)>) {
 \begin{frame}
   \frametitle{Building a Simple Game with Bevy}
   \begin{center}
-    \Huge The Adventures of Ketamine the Cow
+    \Huge Gragusi Survivor
   \end{center}
 \end{frame}
 
-\section{Building a simple game with Bevy.}
-% only a name, no code needed
-\begin{frame}
-  \frametitle{Building a Simple Game with Bevy}
-  \begin{center}
-    \Huge The Adventures of Ketamine the Cow
-  \end{center}
-\end{frame}  
 
 \section{Conclusion}
 
