--- a/slides/main.tex
+++ b/slides/main.tex
@@ -80,6 +80,37 @@
     \end{column}
   \end{columns}
 \end{frame}
+
+\begin{frame}{Bevy Resources}
+  \frametitle{Where to Learn More}
+  
+  \begin{itemize}
+    \item \textbf{Official Website}: \href{https://bevy.org/}{https://bevy.org/}
+    \begin{itemize}
+      \item Main hub for Bevy news and documentation
+    \end{itemize}
+    
+    \item \textbf{Learning Resources}: \href{https://bevy.org/learn/}{https://bevy.org/learn/}
+    \begin{itemize}
+      \item Official learning guide and tutorials
+    \end{itemize}
+    
+    \item \textbf{Examples}: \href{https://bevy.org/examples/}{https://bevy.org/examples/}
+    \begin{itemize}
+      \item Interactive examples covering all features
+    \end{itemize}
+    
+    \item \textbf{GitHub Repository}: \href{https://github.com/bevyengine/bevy}{https://github.com/bevyengine/bevy}
+    \begin{itemize}
+      \item Source code and issue tracking
+    \end{itemize}
+    \item \textbf{Bevy Cheatbook}: \href{https://bevy-cheatbook.github.io/}{https://bevy-cheatbook.github.io/}
+    \begin{itemize}
+      \item Community-driven cookbook with snippets and dark knowledge
+    \end{itemize}
+  \end{itemize}
+\end{frame}
+
 \section{Why use Bevy for game development?}
 \begin{frame}{Why use Bevy for game development?}
   \frametitle{Advantages of Bevy}
@@ -92,6 +123,8 @@
     \item \textbf{Modular Design}: Use only what you need - built as a collection of plugins you can mix and match.
   \end{itemize}
 \end{frame}
+
+
 \begin{frame}{Why not use Godot or Unity?}
   \frametitle{Bevy vs Other Engines}
 
